# crudechess

./: .gitignore  CMakeLists.txt  README.md  run
include/: log.hh  strfuns.hh
lib/: CMakeLists.txt
lib/liblog/: CMakeLists.txt  log.cc
src/board/: CMakeLists.txt  board.cc  board.hh  board_types.hh  fen.cc  fen.hh  movegen.cc  print_board.cc
test/: CMakeLists.txt
test/src/: CMakeLists.txt
test/src/board/: CMakeLists.txt  fen.cc
